some css fixes to ensure that the shopping list and search buttons doesn't overflow into the footer

--- a/frontend/src/Pages/About.css
+++ b/frontend/src/Pages/About.css
@@ -8,12 +8,12 @@
     display: flex;
 }
 
-h1 {
+.about-page h1 {
     color: var(--default-white);
     margin-bottom: 1rem;
 }
 
-h2 {
+.about-page h2 {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
